# MServer

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  conanfile.txt
application/: http_handler.cpp  http_handler.hpp  main.cpp  router.cpp
config/: app.conf  server.conf
controller/: AuthController.hpp  HttpHandler.cpp  HttpHandler.hpp  WebSocketHandler.cpp  websocket_handler.cpp
data/: Database.cpp  Database.hpp
data/dao/: MessageDao.cpp  MessageDao.hpp  SessionDao.cpp  SessionDao.hpp  UserDao.cpp  UserDao.hpp  message_dao.cpp  session_dao.cpp  user_dao.cpp
data/db/migrations/: 001_init.sql
data/models/: session.hpp  user.hpp
db/: schema.sql  test.db
db/migrations/: 001_init.sql
domain/: auth_service.cpp  message_service.cpp  message_service.hpp
domain/common/: Common.hpp  common.hpp  constants.hpp  exceptions.hpp  types.hpp
domain/middleware/: auth_middleware.cpp
domain/models/: Message.hpp  Session.hpp  User.hpp
domain/repository/: ISessionRepository.hpp  IUserRepository.hpp
domain/services/: AuthService.hpp
include/business/: auth_service.hpp  user_service.hpp
include/middleware/: auth_middleware.hpp  cors_middleware.hpp
include/persistence/: database.hpp
include/persistence/dao/: session_dao.hpp  user_dao.hpp
include/persistence/models/: message.hpp  user.hpp
include/presentation/: websocket_handler.hpp
include/utils/: crypto.hpp  logger.hpp
network/: HttpServer.hpp  Router.cpp  router.cpp  router.hpp
network/utils/: Config.cpp  Config.hpp  Crypto.cpp  JsonHelper.cpp  Logger.cpp  crypto.cpp  json_helper.cpp  json_helper.hpp
src/: main.cpp
src/business/: auth_service.cpp  user_service.cpp
src/chatserver/: ChatServer.cpp  ChatServer.h  MDP.h  PacketHandler.cpp  PacketHandler.h  SDP.h  SSP.h  SSPServer.cpp  SSPServer.h  WebSocketServer.cpp  WebSocketServer.h
src/common/: Constants.h  DBManager.h
src/packets/: SMPAPacket.h  SMPSPacket.h  clientPacket.h  serverPacket.h
src/persistence/: database.cpp
src/persistence/dao/: user_dao.cpp
src/presentation/: http_handler.cpp  websocket_handler.cpp
src/turnserver/: MediaServer.cpp  MediaServer.h  SignalingServer.cpp  SignalingServer.h  TurnServer.cpp  TurnServer.h
src/utils/: config.cpp  crypto.cpp  logger.cpp
